--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorSecondary">#1F2D54</color>
     <color name="colorAccent">#5D78C1</color>
     <color name="colorAccentDark">#374773</color>
-    <color name="coloTextLight">#ffffff</color>
     <color name="backgroundDark">#131826</color>
+    <color name="white">#FFFFFF</color>
 </resources>
