--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -17,10 +17,11 @@
     <ImageView
         android:id="@+id/drawer_user_icon"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="64dp"
+        android:layout_gravity="left"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@mipmap/amiv_logo" />
 
     <TextView
         android:id="@+id/drawer_user_title"
