--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,14 +9,23 @@
             android:icon="@drawable/ic_menu_account"
             android:title="Login" />
         <item
-            android:id="@+id/nav_checkin"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Check-in" />
-        <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_settings"
             android:title="Settings" />
     </group>
+
+    <item android:title="Apps">
+        <menu>
+            <item
+                android:id="@+id/nav_checkin"
+                android:icon="@drawable/ic_menu_camera"
+                android:title="Check-in" />
+            <item
+                android:id="@+id/nav_demoapp"
+                android:icon="@drawable/ic_menu_gallery"
+                android:title="Demo App" />
+        </menu>
+    </item>
 
     <item android:title="Developers">
         <menu>
