--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#5D78C1</color>
     <color name="colorAccentDark">#374773</color>
     <color name="backgroundDark">#131826</color>
-    <color name="white">#FFFFFF</color>
+    <color name="white">#ffffff</color>
 </resources>
