--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/bottom_nav_home"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/bottom_nav_blitz"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_articles" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/bottom_nav_events"
         android:icon="@drawable/ic_sync_black_24dp"
         android:title="@string/title_events" />
 
