--- a/app/src/main/res/layout/list_item_event.xml
+++ b/app/src/main/res/layout/list_item_event.xml
@@ -57,6 +57,18 @@
             android:paddingRight="12dp"
             android:textSize="18sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/signupStatus"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:gravity="right|center"
+            android:paddingLeft="6dp"
+            android:paddingRight="12dp"
+            android:tint="@color/colorYellow"
+            android:visibility="gone"
+            app:srcCompat="@drawable/ic_pending" />
     </LinearLayout>
 
     <View
