--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -26,13 +26,14 @@
             android:visibility="gone"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.android.volley.toolbox.NetworkImageView
+        <ImageView
             android:id="@+id/eventPoster"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
-            app:layout_constraintBottom_toTopOf="@+id/scrollView_event" />
+            app:layout_constraintTop_toBottomOf="@id/toolbar_include"
+            app:srcCompat="@mipmap/amiv_logo" />
 
         <ScrollView
             android:id="@+id/scrollView_event"
@@ -48,8 +49,9 @@
 
                 <View
                     android:id="@+id/posterMask"
-                    android:layout_width="match_parent"
+                    android:layout_width="10dp"
                     android:layout_height="0dp"
+                    android:alpha="0"
                     android:clickable="true"
                     android:onClick="ScrollToTop" />
 
