--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/bottom_nav_events"
-        android:icon="@drawable/ic_sync_black_24dp"
-        android:title="@string/title_events" />
+        android:icon="@drawable/ic_notifications"
+        android:title="@string/title_notifications" />
 
 </menu>
