--- a/app/src/main/res/layout/fragment_event_detail.xml
+++ b/app/src/main/res/layout/fragment_event_detail.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -39,11 +37,7 @@
                 android:id="@+id/eventDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Es ist wissenschaftlich erwiesen worden, dass Bergluft in der Lernphase die Motivation nachhaltig verbessert. Daher hat der AMIV beschlossen, ein Wanderweekend zu organisieren. Wir werden während 2 Tagen die frische Luft im Appenzell zu schnuppern bekommen. Wunderschöne Landschaften in Kombination mit dem einen oder anderen Berge erwarten uns!\n
-\n
-Wann? 16-17 Juni\n
-Wo? Zürich - Appenzell - Zürich\n
-Preis? 80.-"
+                android:text=""
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
             <TextView
