--- a/app/src/main/res/layout/list_item_event.xml
+++ b/app/src/main/res/layout/list_item_event.xml
@@ -3,7 +3,6 @@
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item_event_constraint"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -40,7 +39,7 @@
             <TextView
                 android:id="@+id/infoField"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 android:paddingBottom="8dp"
                 android:paddingLeft="14dp"
