--- a/app/src/main/res/layout/list_item_header.xml
+++ b/app/src/main/res/layout/list_item_header.xml
@@ -8,7 +8,7 @@
     <TextView
         android:id="@+id/titleField"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:paddingLeft="12dp"
         android:paddingTop="8dp"
