--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -21,7 +21,8 @@
         android:layout_gravity="left"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/amiv_logo" />
+        android:tint="@color/colorPrimary"
+        app:srcCompat="@drawable/ic_amiv_logo" />
 
     <TextView
         android:id="@+id/drawer_user_title"
