--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,9 +21,9 @@
                 android:icon="@drawable/ic_menu_camera"
                 android:title="Check-in" />
             <item
-                android:id="@+id/nav_demoapp"
+                android:id="@+id/nav_barcode_id"
                 android:icon="@drawable/ic_menu_gallery"
-                android:title="Demo App" />
+                android:title="Barcode ID" />
         </menu>
     </item>
 </menu>
