--- a/app/src/main/res/layout/list_item_header.xml
+++ b/app/src/main/res/layout/list_item_header.xml
@@ -12,7 +12,7 @@
         android:layout_weight="1"
         android:paddingLeft="12dp"
         android:paddingTop="8dp"
-        android:text="Header"
+        android:text=""
         android:textSize="24sp"
         android:textStyle="bold" />
 
