--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -3,17 +3,17 @@
     <!-- These settings headers are only used on tablets. -->
 
     <header
-        android:fragment="ch.amiv.android_app.SettingsActivity$GeneralPreferenceFragment"
+        android:fragment="ch.amiv.android_app.core.SettingsActivity$GeneralPreferenceFragment"
         android:icon="@drawable/ic_info_black_24dp"
         android:title="@string/pref_header_general" />
 
     <header
-        android:fragment="ch.amiv.android_app.SettingsActivity$NotificationPreferenceFragment"
+        android:fragment="ch.amiv.android_app.core.SettingsActivity$NotificationPreferenceFragment"
         android:icon="@drawable/ic_notifications"
         android:title="@string/pref_header_notifications" />
 
     <header
-        android:fragment="ch.amiv.android_app.SettingsActivity$DataSyncPreferenceFragment"
+        android:fragment="ch.amiv.android_app.core.SettingsActivity$DataSyncPreferenceFragment"
         android:icon="@drawable/ic_sync_black_24dp"
         android:title="@string/pref_header_data_sync" />
 
